NativeHTTP By Lukasz Magiera
For more info visit http://nativehttp.org

3007.13:
-WebSockets - Changing callbacks at runtime
-Sessions - option to get SessionID
-SDL not needed anymore
-NativeTest removed
-Stat 3.0
-Added 'err' function for error logging
-NativeStat disabled for a while

0107.13:
-New makefile target for building only NativeStat - 'stat'
-Fixed some WebSocket connecting issues
-Fixed bad packet sending order
-Fixed session security issue that might occur in some extreme cases
-WebSockets - Messages can now be sent from onConnect callback

2306.13:
-Superstring - New file functions
-Namespace 'nativehttp::websock' aliased to 'nw'
-WebSocket Sending functions - Checkig client protocol
-Sessions - Fixed bug causing NULL session pointer with no-cokie request

1606.13:
-Sessions accessible by UID(so that they are usable with WebSockets)
-In cookie set function there is "path=/" set by default
-Small memory leak fixed
-[Debug build] Options for logging requests/responses
-Superstring - lock and unlock stackable
-Checking for existance of configuration file
-Some Makefile fixes
-Catching SIGINT
-Ccfg not showing errors when parsing is done
-Fixed POST data reciving
-Colored terminal output
-Fixed Transfer scale in NativeStat
-Added few integer SuperString functions

0506.13:
-maxClients function
-WebSockets (RFC6455)! - Full message reciving, sending(Text/Binary, streaming/normal sending), upload chunking
	automatic ping response, closure process still have to be improved
-Configuration sorted
-Small bugfixes around disconecting clients
-is_ssl function

0106.13:
-Thread cleanup
-SuperString - set_file now sets position to 0
-NHP Parser - Configurble nativehttp.h directory
-Version checking of installed nativehttp.h

3105.13:
-Performance options
-Added 2 comment styles in Ccfg2
-Configuration file clean-up 
-SuperString - Position functions for SuperString type
-SuperString - New functions:
  -go[begin/end/pos]
  -get[begin/end]